# WARNING: head commit changed in the meantime
fixes

--- a/src/plugin.yml
+++ b/src/plugin.yml
@@ -6,7 +6,7 @@ version: 1.0.6
 api-version: 1.16
 description: Dieses Plugin fügt dem Beruf Magier einen neuen craftbaren Gegentand hinzu.
 website: www.minecraft-server.eu/server/index/216B4
-
+softdepend: [MclRpEngine]
 commands:
 
     minv:
